tests/lean/collectDepsIssue.lean.expected.out
collectDepsIssue.lean:5:0-5:1: error: don't know how to synthesize placeholder
context:
α : Type
a : α
⊢ List α
collectDepsIssue.lean:9:13-9:18: warning: declaration uses 'sorry'
collectDepsIssue.lean:12:8-12:13: warning: declaration uses 'sorry'
collectDepsIssue.lean:13:8-13:13: warning: declaration uses 'sorry'
